API implementation? categories not working

--- a/popup.css
+++ b/popup.css
@@ -14,7 +14,7 @@ See the License for the specific language governing permissions and
 limitations under the License.
 */
 
-
+/* Adding comments so I can comment this */
 body {
   font-family: Georgia, serif;
   width: 20rem;
