--- a/popup.css
+++ b/popup.css
@@ -129,15 +129,19 @@ label {
   color: #d3926e;
 }
 
-#fetch-tabs {
-  display: block;
+#group-tabs {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   margin: 20px auto;
   padding: 10px 20px;
   background-color: #d3926e;
   color: white;
+  font-weight: 600;
   border: none;
   border-radius: 8px;
   cursor: pointer;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 #tabs-display {
