update to website

--- a/my-modern-app/src/styles/Navbar.css
+++ b/my-modern-app/src/styles/Navbar.css
@@ -123,3 +123,14 @@
   background: #c9302c;
 }
 
+.chart-card h3 {
+    margin-bottom: 10px;
+    color: black !important;
+
+}
+
+.chart-card p {
+  margin-bottom: 10px;
+  color: black !important;
+
+}
