--- a/my-modern-app/src/styles/Analytics.css
+++ b/my-modern-app/src/styles/Analytics.css
@@ -1,54 +1,73 @@
-.analytics-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 20px;
-}
-
 .charts {
     display: flex;
     justify-content: space-around;
     width: 100%;
     gap: 20px;
 }
-
 .chart-card {
+    padding: 20px;
+}
+.analytics-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
     background: #f9f6f2;
     padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    color: black;
+}
+.chart-card h3 {
+    margin-bottom: 10px;
+    color: #c27f54 !important;
 }
 
+.analytics-container h3 {
+    color: #c27f54;
+    font-size: 2rem;
+}
+.analytics-container h4 {
+    color: #c27f54;
+    font-size: 2rem;
+}
+
+.score-card {
+    padding: 15px;
+    text-align: center;
+    width: 150px;
+    color: black;
+}
+.positive {
+    color: black;
+}
+.negative {
+    color: black;
+}
 .score-section {
     display: flex;
     justify-content: space-around;
     width: 100%;
     margin-top: 20px;
+    color: black;
 }
 
-.score-card {
-    background: #fff;
-    padding: 15px;
-    border-radius: 10px;
-    text-align: center;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    width: 150px;
+.score-section p {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    margin-top: 20px;
+    color: black;
 }
 
-.positive {
-    color: green;
-}
-
-.negative {
-    color: red;
-}
 
 .analytics-button {
     background-color: #8B6F4E;
-    color: white;
+    color: black;
     padding: 10px 15px;
     border: none;
     cursor: pointer;
     border-radius: 5px;
     margin-top: 20px;
+}
+.analytics-button:hover {
+    background-color: #C27F54;
 }
