--- a/my-modern-app/src/styles/Navbar.css
+++ b/my-modern-app/src/styles/Navbar.css
@@ -134,3 +134,17 @@
   color: black !important;
 
 }
+
+.navbar-brand {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.navbar-logo {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-right: 10px;
+}
