--- a/my-modern-app/src/styles/Leaderboard.css
+++ b/my-modern-app/src/styles/Leaderboard.css
@@ -18,10 +18,14 @@
 
 }
 
-.leaderboard h2 {
+.leaderboard h1 {
   text-align: center;
-  color: #213547;
+  color: #c27f54;
   margin-bottom: 2rem;
+  font-weight: bold;
+  padding-bottom: 2rem;
+  padding-top: 2rem;
+  font-size: 2.5rem;
 }
 
 .podium-container {
